// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox> Global render should render checked 1`] = `
<Component
  checked={true}
>
  <label
    className="checkboxContainer"
  >
    <input
      checked={true}
      className="hiddenCheckBox"
      type="checkbox"
    />
    <StyledCheckbox
      checked={true}
    >
      <div
        className="styledCheckbox checked"
      >
        <Checkmark>
          <svg
            className="checkmark"
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 10L9 13L15.0407 7"
              strokeLinecap="round"
            />
          </svg>
        </Checkmark>
      </div>
    </StyledCheckbox>
  </label>
</Component>
`;

exports[`<Checkbox> Global render should render default 1`] = `
<Component>
  <label
    className="checkboxContainer"
  >
    <input
      className="hiddenCheckBox"
      type="checkbox"
    />
    <StyledCheckbox>
      <div
        className="styledCheckbox"
      >
        <Checkmark>
          <svg
            className="checkmark"
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 10L9 13L15.0407 7"
              strokeLinecap="round"
            />
          </svg>
        </Checkmark>
      </div>
    </StyledCheckbox>
  </label>
</Component>
`;

exports[`<Checkbox> Global render should render disabled 1`] = `
<Component
  disabled={true}
>
  <label
    className="checkboxContainer"
  >
    <input
      className="hiddenCheckBox"
      type="checkbox"
    />
    <StyledCheckbox
      disabled={true}
    >
      <div
        className="styledCheckbox disabled"
      >
        <Checkmark>
          <svg
            className="checkmark"
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 10L9 13L15.0407 7"
              strokeLinecap="round"
            />
          </svg>
        </Checkmark>
      </div>
    </StyledCheckbox>
  </label>
</Component>
`;

exports[`<Checkbox> Global render should render unchecked 1`] = `
<Component>
  <label
    className="checkboxContainer"
  >
    <input
      className="hiddenCheckBox"
      type="checkbox"
    />
    <StyledCheckbox>
      <div
        className="styledCheckbox"
      >
        <Checkmark>
          <svg
            className="checkmark"
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 10L9 13L15.0407 7"
              strokeLinecap="round"
            />
          </svg>
        </Checkmark>
      </div>
    </StyledCheckbox>
  </label>
</Component>
`;

exports[`<Checkbox> Global render should render unchecked and with a label 1`] = `
<Component
  label="Label"
>
  <label
    className="checkboxContainer"
  >
    <input
      className="hiddenCheckBox"
      type="checkbox"
    />
    <StyledCheckbox>
      <div
        className="styledCheckbox"
      >
        <Checkmark>
          <svg
            className="checkmark"
            fill="none"
            height="20"
            viewBox="0 0 20 20"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 10L9 13L15.0407 7"
              strokeLinecap="round"
            />
          </svg>
        </Checkmark>
      </div>
    </StyledCheckbox>
    <span
      className="text"
    >
      Label
    </span>
  </label>
</Component>
`;
